Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6491

Confusing results for too long fsname

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.8.0
    • None
    • None
    • 3
    • 9223372036854775807

      If users passed a fsname longer than 9 bytes, caller
      will handle it as ENOMEM which output following results:

      error: conf_param: Cannot allocate memory

      which is really unfriendly for common users.

            emoly.liu Emoly Liu
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: