LU-6491 llog: fix wrong return value for too long fsname

If users passed a fsname longer than 9 bytes, caller
will handle it as ENOMEM which output following results:

error: conf_param: Cannot allocate memory

which is really unfriendly for common users.

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I51d0cf28a88d828cea4f8be9977ed274b822ea01
Reviewed-on: http://review.whamcloud.com/14568
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Emoly Liu <emoly.liu@intel.com>
Reviewed-by: Bobi Jam <bobijam@hotmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>